--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,9 @@
     text-align: center;
 }
 
+
+
+
 body {
     margin: 0;
     padding: 0;
@@ -517,14 +520,24 @@ button {
 }
 /* -- SEO -- afin de répondre à la Check-list du point num 4 -- background couleur sur texte area*/
 .form-control {
+    color:#9E9E9E;
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
     background-color:lightcyan;
-    transition: all .6s ease-in-out ;
+    transition: all .4s ease-in-out ;
     &:focus{
-         background-color:white; 
+        background-color:white;
+        color:#575757;
+    }
+    &:not(:focus):invalid {
+                background-color: red;
+                border: 2px solid darkred;
+                color: white;
     }
 }
+
+
+
 
 /* -- SEO -- afin de répondre à la Check-list du point num 4 --retrait de class="scrollToTop" devenue obsolette car j'ai supprimé la div et en plus, elle avait un "z-index:500" et selon la check-list la position hors-écran NE DOIT PAS être utilisée a seule fin de visibilité */
 /*.scrollToTop {
