--- a/style.scss
+++ b/style.scss
@@ -774,6 +774,7 @@ h4 {
 .white {
     color: #FFFFFF!important;
 }
+
 /* recentrage des images réduites avec "margin: auto"*/
 .portfolio-thumb {
     margin: 0 auto 24px auto;
@@ -892,13 +893,15 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+/* -- W3C - erreur de code à cause de "min&max-device-width"*/
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+/* -- W3C - erreur de code à cause de "min&max-device-width"*/
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -916,20 +919,24 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
+/* -- W3C - erreur de code à cause de "constant(safe-area-inset-left&right)"*/
+    /*
     .bloc {
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
     }
+    */
     .bloc-group,
     .bloc-group .bloc {
         display: block;
         width: 100%;
     }
+ /* -- W3C - erreur de code à cause de "constant(safe-area-inset-left&right)"*/
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        /*padding-left: constant(safe-area-inset-left);
+        padding-right: constant(safe-area-inset-right);*/
     }
 }
 
