--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -105,7 +105,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("../../img/texture-paper.png");
+    background: url("../img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -847,21 +847,21 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("../../img/dots-bg.png");
+    background-image: url("../img/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("../../img/lines-h2-bg.png");
+    background-image: url("../img/lines-h2-bg.png");
 }
 
 .bg-banniere {
-    background-image: url("../../img/la-chouette-agence-banniere.jpg");
+    background-image: url("../img/la-chouette-agence-banniere.jpg");
 }
 
 
 /* -- SEO - Changement du background de bmp à png pour alléger/accélérer le site */
 .bg-presentation {
-    background-image: url("../../img/image-de-presentation.png") /*url("img/image-de-presentation.bmp")*/;
+    background-image: url("../img/image-de-presentation.png") /*url("img/image-de-presentation.bmp")*/;
 }
 
 
