--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -861,7 +861,7 @@ h4 {
 
 /* -- SEO - Changement du background de bmp à png pour alléger/accélérer le site */
 .bg-presentation {
-    background-image: url("../img/image-de-presentation.png") /*url("img/image-de-presentation.bmp")*/;
+    background-image: url("../img/image-de-presentation.jpg") /*url("img/image-de-presentation.bmp")*/;
 }
 
 
